<resources>
    <string name="app_name">PolishProducts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_fragment_header_tx">Create Account</string>
    <string name="register_fragment_textinput_edit_text_hint_name">Name</string>
    <string name="register_fragment_textinput_edit_text_hint_email">Email</string>
    <string name="register_fragment_textinput_edit_text_hint_password">Password</string>
    <string name="register_fragment_button_register">Register</string>
    <string name="progress_dialog_alert_name">Please Wait...</string>
    <string name="login_fragment_login_header">Login</string>
    <string name="login_fragment_email_textinputedittext_hint_email">Enter your email</string>
    <string name="login_fragment_email_field_title_email">Email</string>
    <string name="login_fragment_password_field_title_password">Password</string>
    <string name="login_fragment_email_textinputedittext_hint_password">Enter your password</string>
    <string name="login_fragment_login_button">Login</string>
    <string name="login_fragment_donthaveanaccount">Don\'t have an account?</string>
    <string name="login_fragment_create_account">Create Account</string>
    <string name="create_note_fragment_title">Restructuring</string>
    <string name="create_note_fragment_content">Reconstruction continues tomorrow on Tuesday</string>
    <!--Create Note Fragment-->
    <string name="create_note_fragment_task">Create a task!</string>
    <string name="create_note_fragment_task_title">Task title</string>
    <string name="create_note_fragment_task_text">Task content</string>
    <string name="create_note_fragment_task_save">Save Task</string>
    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="error_exception_unknown_error">Unknown Error</string>
    <string name="error_exception_network_error">Network Error</string>
    <string name="error_exception_time_out_error">Timeout Error</string>
    <string name="userProfile_fragment_profile_title">Profile</string>
    <string name="userProfile_fragment_username">Username</string>
    <string name="userProfile_fragment_email">Email</string>
    <string name="userProfile_fragment_note_count">Number of Notes</string>
    <string name="userProfile_fragment_note_count_value">Count</string>
    <string name="userProfile_fragment_logOut">Log Out</string>
    <string name="task_details_fragment_title">Task Details</string>
    <string name="taskDetails_fragment_task_title">Task Title</string>
    <string name="taskDetails_fragment_task_priority">Task Priority</string>
    <string name="taskDetails_fragment_task_content">Task Title</string>
</resources>