<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.login.presentation.LoginFragment">


    <TextView
        android:id="@+id/login_fragment_login_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_login_header"
        android:textSize="@dimen/login_fragment_login_header_txsiz" />

    <TextView
        android:id="@+id/login_fragment_email_field_title_email_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_email_field_title_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_email_textinputlayout_email_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_fragment_email_textinputlayout_email_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_fragment_email_field_title_password_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_password_field_title_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_email_textinputlayout_password_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_fragment_email_textinputlayout_password_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_password"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_fragment_login_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_fragment_login_button_txsiz" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        >
        <TextView
            android:id="@+id/login_fragment_donthaveanaccount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login_fragment_donthaveanaccount"
            />
        <TextView
            android:id="@+id/login_fragment_create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/green"
            android:text="@string/login_fragment_create_account"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--
    <TextView
        android:id="@+id/network_status"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="connectivity state"
        android:textSize="22sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/network_status_two"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="connectivity state two"
        android:textSize="22sp"
        android:textAlignment="center"
        />
        -->
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>