<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.register.presentation.RegisterFragment">

    <TextView
        android:id="@+id/register_fragment_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="8dp"
        android:text="@string/register_fragment_header_tx"
        android:textAlignment="center"
        android:textSize="@dimen/register_fragment_header_txSise" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_fragment_textinputlayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fragment_textinputedittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/register_fragment_textinput_edit_text_hint_name"
            android:drawablePadding="4dp"
            android:inputType="textPersonName"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_fragment_textinputlayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fragment_textinputedittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/register_fragment_textinput_edit_text_hint_email"
            android:drawablePadding="4dp"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_fragment_textinputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fragment_textinputedittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/register_fragment_textinput_edit_text_hint_password"
            android:drawablePadding="4dp"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_validate_input_field_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:background="@drawable/register_button_bg"
        android:fontFamily="@font/aclonica"
        android:text="@string/register_fragment_button_register"
        android:textAllCaps="false"
        android:textSize="@dimen/register_fragment_header_txSise" />



</androidx.appcompat.widget.LinearLayoutCompat>