<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".feature.createnote.presentation.CreateNoteFragment"
    >

    <TextView
        android:id="@+id/create_note_fragment_task_tv"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_note_fragment_task"
        android:textSize="@dimen/create_note_fragment_task_txsiz" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_note_fragment_task_title_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_note_fragment_task_title_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_note_fragment_task_title"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_note_fragment_task_content_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_note_fragment_task_content_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_note_fragment_task_text"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/create_note_fragment_buget_period_spinner"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:padding="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/priority"
        android:background="@drawable/spinner_bg"
        />

    <Button
        android:id="@+id/create_note_fragment_save_task_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_note_fragment_task_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_fragment_login_button_txsiz" />








</androidx.appcompat.widget.LinearLayoutCompat>